--- a/tmps/index.html
+++ b/tmps/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Translate</title>
+  <link rel="icon" href="https://t.t-n.top/favicon.ico">
   <style>
     body{
       min-height: 100vh;
